Stops active tabs from moving and left edge of text becoming misaligned on desktop layouts.

--- a/stylesheets/_tabs.scss
+++ b/stylesheets/_tabs.scss
@@ -165,7 +165,7 @@
 
   > li.is-active > a {
     background-color: $gray-lighter;
-    border: 0;
+    border-color: transparent;
     box-shadow: none;
     &:hover {
       background-color: $gray-lighter;
